<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_action_help_outline"
            android:title="@string/introduction"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="Settings"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_social_share"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_rate"
            android:title="@string/rate"
            android:icon="@drawable/ic_toggle_star"
            app:showAsAction="ifRoom"/>
</menu>
